samples/_failures_safe/1761260998_20365a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_360759b9.c: In function ‘boundingbox_from_vertices’:
./samples/SAFE/__tmp_360759b9.c:130:5: error: expected declaration or statement at end of input
  130 |     }
      |     ^
